--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,12 @@
   "dependencies": {
     "next": "^9.4.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "reactstrap": "^9.0.1"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   }
-
-  
 }
-
